2008-06-10  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.h: Added declaratino of clean_container().

	* compras.c (CalcularTotalesGuias|CheckMontoGuias): Changed to use the GtkBuilder interface.

2008-06-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c (clean_container): Added function to clean
	containers. Focused on GtkWindows and clean any GtkLabel or
	GtkEntry without a number on the widget name.
	(clean_container): Replaced the do-while for a while.

2008-06-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c
	(on_btn_invoice_guide_clicked|on_btn_guide_invoice_clicke): Added
	function to handle the proper signal.
	(AddGuia|DelGuia): Deleted function. No one use it now.

2008-06-05  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_entry_srch_provider_activate): Created to deal
	with the activate signal of entry and find on srch_provider
	window. Search and find a provider.
	(SelectProveedor|CloseSelectProveedor): Deleted function.
	(ClearFactData): Modified to deal with the widget from GtkBuilder.

2008-06-04  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (FillGuias): Changed query to get pending guides.
	(compras_win): Added columns to treeviews.
	(on_entry_guide_invoice_activate): Added function to deal with the
	button signal.

2008-05-16  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c (parse_date): Dropped, not need it anymore.

	* compras.c (IngresarCompra): Last part to deal with an ingress guide.

	* postgres-functions.c (IngresarGuia): Changed the type of input
	values related to date from gchar * to gint.

2008-05-15  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CheckDocumentData): Fixed to use parse_date to get
	the GDate from the date string set by calendar_display.

	* utils.c (parse_date): Created this function to deal with a parse
	of date and return a GDate, this should not be useful when
	g_date_set_parse deal with DDMMYY date format.

	* compras.c (CheckDocumentData): Changed to deal with invoice and